--- a/etc/nginx.config
+++ b/etc/nginx.config
@@ -3,7 +3,7 @@ server {
   listen 80 default;
 
   location ^~ /uploads/ {
-    root /home/box/web;
+    root /home/box/web/;
   }
 
   location ~* ^.+\.\w+$ {
